package ui;

public interface ActionListener {
    void actionEvent(UIEvents event);
}
